--- a/Vue/index.html
+++ b/Vue/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-    
+    <link rel="icon" href="./src/assets/profile/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GShepherd</title>
   </head>
