--- a/Vue/index.html
+++ b/Vue/index.html
@@ -6,10 +6,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link rel="icon" href="./src/assets/profile/logo.png">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..300,0..1,-50..200" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GShepherd</title>
+    <style>
+      html,body,#app{
+        height: 100%;
+      }
+    </style>
   </head>
-  <body style="margin: 0%">
+
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
